Refactoring The Code

--- a/movies-imdb/src/Config.json
+++ b/movies-imdb/src/Config.json
@@ -1,6 +1,6 @@
 {
-    "ApiURL": "https://api.themoviedb.org/3/",
-    "ApiKEY": "1f66ce456674bccafd7853304302944c",
-    "ImageBaseURL": "http://image.tmdb.org/t/p/",
-    "PosterSize": "w200"
+    "apiURL": "https://api.themoviedb.org/3/",
+    "apiKey": "1f66ce456674bccafd7853304302944c",
+    "imageBaseURL": "http://image.tmdb.org/t/p/",
+    "posterSize": "w200"
 }
