--- a/movies-imdb/src/Services/Config.json
+++ b/movies-imdb/src/Services/Config.json
@@ -2,5 +2,6 @@
     "apiURL": "https://api.themoviedb.org/3/",
     "apiKey": "1f66ce456674bccafd7853304302944c",
     "imageBaseURL": "http://image.tmdb.org/t/p/",
-    "posterSize": "w200"
+    "posterSize": "w200",
+    "backdropSize": "w1280"
 }
